--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <button id="scissors">Pick Me</button>
     </div>
         <button id="reset">🔄Reset Score</button>
-        <h1 id="picked"></h1>
+        <button id="autoplay">🤖 AutoPlay</button> 
+             <h1 id="picked"></h1>
         <h2 id="result">RESULT 🤔</h2>
         <img id="background"src="img4.png">
 
